<resources>
    <string name="app_name">FilmZ</string>
    <!--LENGUAGE_SCREEN-->
    <string name="lenguage_screen_textIdioma">CATALÀ</string>
    <!--LOGIN_SCREEN-->
    <string name="login_screen_nom">Nom</string>
    <string name="login_screen_contrasenya">Contrasenya</string>
    <string name="login_screen_buton_iniciar_sessió">Iniciar Sessió</string>
    <string name="login_screen_text_iniciar_registre">Encara no tens cap compte?</string>
    <string name="login_screen_btn_obrir_registre">Registrar-se</string>
    <string name="login_screen_toast_error">Usuari o Contrasenya incorrectes</string>
    <!--DIFFICULT_SCREEN-->
    <string name="difficult_screen_textTitol">ESCULL LA DIFICULTAT</string>
    <string name="difficult_screen_buttonTextFacil">FÀCIL</string>
    <string name="difficult_screen_buttonTextMitja">MITJÀ</string>
    <string name="difficult_screen_buttonTextDificil">DIFÍCIL</string>
    <string name="difficult_screen_textDificultatFacil">NORMES COMUNS:\n- Número de preguntes: 20\n- Preguntes per genere: 6\n- Temps per respondre a les preguntes: 20 segons\n- Quan hagis seleccionat la resposta i estiguis segur, prem el botó ">"\n\nNORMES DEPENENT DE DIFICULTAT:\n- La puntuació es multiplicarà *1</string>
    <string name="difficult_screen_textDificultatMitja">NORMES COMUNS:\n- Número de preguntes: 20\n- Preguntes per genere: 6\n- Temps per respondre a les preguntes: 20 segons\n- Quan hagis seleccionat la resposta i estiguis segur, prem el botó ">"\n\nNORMES DEPENENT DE DIFICULTAT:\n- La puntuació es multiplicarà *2</string>
    <string name="difficult_screen_textDificultatDificil">NORMES COMUNS:\n- Número de preguntes: 20\n- Preguntes per genere: 6\n- Temps per respondre a les preguntes: 20 segons\n- Quan hagis seleccionat la resposta i estiguis segur, prem el botó ">"\n\nNORMES DEPENENT DE DIFICULTAT:\n- La puntuació es multiplicarà *3</string>
    <string name="difficult_screen_buttonContinuar">JUGAR</string>
    <!--REGISTER_SCREEN-->
    <string name="register_screen_textRegistre">REGISTRE</string>
    <string name="register_screen_nomCamp">Nom</string>
    <string name="register_screen_contrasenyaCamp">Contrasenya</string>
    <string name="register_screen_repetirContrasenyaCamp">Confirmar contrasenya</string>
    <string name="register_screen_edatCamp">Edat</string>
    <string name="register_screen_sexeCamp">Sexe</string>
    <string name="register_screen_sexeCampRadBtn3">Altre</string>
    <string name="register_screen_estudiesCamp">Estudies?</string>
    <string name="register_screen_estudiesCampRadBtn1">Sí</string>
    <string name="register_screen_estudiesCampRadBtn2">No</string>
    <string name="register_screen_robotCamp">No soc un robot</string>
    <string name="register_screen_politicaCamp">Accepar política de seguretat</string>
    <string name="register_screen_btnCrear">CREAR</string>
    <string name="register_screen_btnIniciSessio">INICIA SESSIÓ</string>
    <string name="register_screen_toast_edat_enter">El camp de l\'edat ha de ser un enter!</string>
    <string name="register_screen_toast_contrasenya_requisits">La contrassenya ha de tenir:
    ->Almenys 8 caràcters
    ->Almenys 1 minúscula i 1 majuscula
    ->Almenys 1 caràcter especial
    ->Almenys 1 digit
    </string>
    <string name="register_screen_toast_repetir_contrasenya">Les contrasenyes no coincideixen</string>
    <string name="register_screen_toast_usuari_existent">JA EXISTEIX UN USUARI AMB AQUEST NOM</string>
    <!--RESULT_SCREEN-->
    <string name="result_screen_btnRanking">RANKING</string>
    <string name="result_screen_btnContinuar">CONTINUAR</string>
    <string name="result_screen_txtEstadistiques">ESTADÍSTIQUES</string>
    <string name="result_screen_txtCategoria">CATEGORIA</string>
    <string name="result_screen_txtEncerts">ENCERTS</string>
    <string name="result_screen_txtGenereDrama">DRAMA</string>
    <string name="result_screen_txtGenereTerror">TERROR</string>
    <string name="result_screen_txtGenereAnimacio">ANIMACIÓ</string>
    <string name="result_screen_txtGenereAccio">ACCIÓ</string>
    <string name="result_screen_txtGenereCienciaFiccio">CIENCIA FICCIÓ</string>
    <!--INTRO_SCREEN-->
    <string name="intro_screen_textIntroduccio"><b>Benvinguts a FilmZ</b>\n\nUna empresa que et farà destacar en el món de la pel·lícula amb lajuda de jocs dinàmics i divertits.\nEndinsa\'t en aquest Joc\/Quiz i aprén i presum als teus amics dels coneixements sobre les pel·lícules.\nT\'atraveixes a iniciar un camí que et pot portar a la victòria?</string>
    <string name="intro_screen_skip">Saltar en </string>
    <string name="intro_screen_continuar">Continuar</string>
    <!--FINAL_SCREEN-->
    <string name="final_screen_nom">Gràcies per jugar</string>
    <string name="final_screen_btn_tornar_a_jugar">Tornar a jugar</string>
    <string name="final_screen_btn_sortir">Sortir</string>
    <!--QUESTION_TO_RESULT-->
    <string name="activity_questio_to_result_missatge">CALCULANT ELS TEUS RESULTATS</string>
    <string name="activity_questio_to_result_espera">Siusplau espera...</string>
    <!--IMATGE_SCREEN-->
    <string name="imatge_screen_text">Presiona per poder respondre la pregunta</string>
    <!--ANIMACIO-QUIZ-->
    <string name="activity_diff_to_quest">PREPARANT EL TEU QUIZ</string>
    <string name="activity_questio_to_result_text1">CALCULANT RESULTATS</string>
    <string name="activity_questio_to_result_text2">Siusplau esperi...</string>
</resources>