<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:orientation="vertical">

    <!-- TEXT SUPERIOR -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/difficult_screen_textTitol"
            android:textSize="40dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- BUTTONS AMB DIFICULTAT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/BtnEasy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/difficult_screen_buttonTextFacil"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp"
            android:background="@drawable/button_redondejat"
            android:backgroundTint="#B5B2B2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            />
        <Button
            android:id="@+id/BtnMedium"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/difficult_screen_buttonTextMitja"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp"
            android:background="@drawable/button_redondejat"
            android:backgroundTint="#FF8000"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"/>
        <Button
            android:id="@+id/BtnDificult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/difficult_screen_buttonTextDificil"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30dp"
            android:background="@drawable/button_redondejat"
            android:backgroundTint="#B5B2B2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"/>
    </LinearLayout>

    <!-- REQUADRE AMB INFO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <TextView
            android:id="@+id/LblDescDif"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_margin="40dp"
            android:padding="15dp"
            android:background="@drawable/button_redondejat"
            android:text="@string/difficult_screen_textDificultatMitja"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- BUTTON CONTINUAR -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/BtnContinuarDificultat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="450dp"
            android:layout_marginRight="450dp"
            android:background="@drawable/button_redondejat"
            android:text="@string/difficult_screen_buttonContinuar"
            android:textSize="40dp"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>