<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:orientation="vertical">
    <!--TEXT REGISTRE-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register_screen_textRegistre"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="50dp"
            android:gravity="center"/>
    </LinearLayout>
    <!--CAMPS A COMPLETAR-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">
        <!--CAMPS INFORMACIO-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">
            <!--CAMPS LEFT-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:orientation="vertical">
                <!--CAMP NOM-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:paddingLeft="30dp"
                        android:text="@string/register_screen_nomCamp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="30dp"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="5dp"
                        android:background="#DCDCDC"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"/>
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:background="@drawable/medical"/>
                </LinearLayout>
                <!--CAMP CONTRASENYA-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:paddingLeft="30dp"
                        android:text="@string/register_screen_contrasenyaCamp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="30dp"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="5dp"
                        android:background="#DCDCDC"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"/>
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:background="@drawable/medical"/>
                </LinearLayout>
                <!--CAMP CONFIRMAR CONTRASENYA-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:paddingLeft="30dp"
                        android:text="@string/register_screen_repetirContrasenyaCamp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="30dp"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="5dp"
                        android:background="#DCDCDC"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"/>
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:background="@drawable/medical"/>
                </LinearLayout>
            </LinearLayout>
            <!--CAMPS RIGHT-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">
                <!--CAMP EDAT-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:paddingLeft="50dp"
                        android:text="@string/register_screen_edatCamp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="30dp"/>
                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="5dp"
                        android:background="#DCDCDC"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:paddingLeft="10dp"/>
                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/medical"/>
                </LinearLayout>
                <!--CAMP SEXE-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <!--TEXT SEXE-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingLeft="50dp"
                            android:text="@string/register_screen_sexeCamp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="30dp"/>
                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/medical"/>
                    </LinearLayout>

                    <!--GROUPBOX SEXE-->
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:background="@drawable/rectangle_checkbox"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">
                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingLeft="10dp"
                            android:text="M"
                            android:textSize="30dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:buttonTint="@color/black"/>
                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingLeft="10dp"
                            android:text="F"
                            android:textSize="30dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:buttonTint="@color/black"/>
                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingLeft="10dp"
                            android:text="@string/register_screen_sexeCampRadBtn3"
                            android:textSize="30dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:buttonTint="@color/black"/>
                    </RadioGroup>
                </LinearLayout>
                <!--CAMP ESTUDIS-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <!--TEXT ESTUDIS-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:paddingLeft="50dp"
                            android:text="@string/register_screen_estudiesCamp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="30dp"/>
                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/medical"/>
                    </LinearLayout>
                    <!--GROUPBOX ESTUDIS-->
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="3"
                        android:background="@drawable/rectangle_checkbox"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">
                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingLeft="10dp"
                            android:text="@string/register_screen_estudiesCampRadBtn1"
                            android:textSize="30dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:buttonTint="@color/black"/>
                        <RadioButton
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingLeft="10dp"
                            android:text="@string/register_screen_estudiesCampRadBtn2"
                            android:textSize="30dp"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:buttonTint="@color/black"/>

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!--CAMPS ROBOT I POLITICA-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <!--CAMP ROBOT-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_checkbox"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="170dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/register_screen_robotCamp"
                    android:textSize="30dp"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"/>
            </LinearLayout>
            <!--CAMP POLITICA-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_checkbox"
                    android:buttonTint="@color/black"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/register_screen_politicaCamp"
                    android:textColor="@color/black"
                    android:textSize="30dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--BUTTON CREAR-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:layout_width="300dp"
            android:layout_height="75dp"
            android:background="@drawable/button_redondejat"
            android:text="@string/register_screen_btnCrear"
            android:textSize="45dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_redondejat"
            android:text="@string/register_screen_btnIniciSessio"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>